--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <form>
         <div class="dropdown">
-        <input id="inputField" type="search">
+        <input id="input-field" type="search">
         <div class="dropdown-content" id="dropdown-content">
         </div>
         </input>
